  must be done in order to prevent other users from being able to trace another
  user through NICK changes and the like.  When a user is placed on the ACCEPT
  list, the user will be notified.

- Due to the new flood control for users, the multiple message restriction has
  been removed. (/msg nick1,nick2,nick3 message) and is configurable in the
  config file.


------------------
 Operator Changes:
------------------

- Unauthorized connection notices have been moved to the +u user mode.

- The server can now differentiate between admins and opers.  This helps
  to hide the IPs of servers, by only showing them to admins:
     (indicated by umode +a and admin=yes; in oper block)

  It also limits certain stats commands to admin only, and certain special
  contrib/ modules (such as opme).
  
- Remote K-Lines are supported.  These allow you to permit operators on 
  remote servers to place klines on your server.  The shared block in the
  config specifices what server to allow remote klines from, and what
  user/host on that server, to restrict it to a specific oper on there.
  This is detailed more in doc/kline.txt

  To K-Line on a specific server:
     /quote kline user@host on irc.server :reason
     /quote kline [time] user@host on irc.server :reason

  To K-Line on multiple servers:
     /quote kline user@host on *.uk :reason
     /quote kline [time] user@host on *.uk :reason

  To K-Line on all servers:
     /quote kline user@host on * :reason
     /quote kline [time] user@host on * :reason

  To K-line locally only:
     /quote kline user@host :reason
     /quote kline [time] user@host :reason

- Local operators are no longer part of ircd.  The oper flags are used to
  restrict what each operator can do.

- User modes can be specified oper only.  This is yet another start time
  configurable option in ircd.conf.  See the comments in example.conf for
  more details.

- STATS e now shows events. (admin only)
