@@ -59,6 +59,9 @@
     The only time you are likely to hit the TCP resolver is for queries
     over 512 bytes.
 
+9.  MODRESTART only reloads modules in modules/autoload, it does not load
+    anything in a modules block in the conf.
+
 
 BUG REPORTS: If you run this code and encounter problems, you must report
  the bug in one of the following ways:
@@ -68,4 +71,4 @@ BUG REPORTS: If you run this code and encounter problems, you must report
  with any report  (with passwords and other sensitive information masked).
 
 --------------------------------------------------------------------------------
-$Id: BUGS,v 7.31 2001/10/08 16:44:29 davidt Exp $
+$Id: BUGS,v 7.32 2001/10/19 15:51:16 wcampbel Exp $
