@@ -1,4 +1,4 @@
-$Id: Hybrid-team,v 7.36 2001/09/28 04:33:29 wcampbel Exp $
+$Id: Hybrid-team,v 7.37 2001/10/19 15:51:16 wcampbel Exp $
 
 The hybrid team is a group of ircd coders who were frustrated
 with the instability and all-out "dirtiness" of the EFnet ircd's
@@ -22,7 +22,7 @@ desrt, Ryan Lortie <desertangel@mindless.com>
 Dianora, Diane Bruce <db@db.net>
 fl_, Lee Hardy <leeh@shagged.org>
 Habeeb, David Supuran <habeeb@cfl.rr.com>
-Hwy101, Walter Campbell <wcampbel@botbay.net>
+Hwy101, W. Campbell <wcampbel@botbay.net>
 is, Edward Brocklesby <ejb@leguin.org.uk>
 isomer, Perry Lorier <perry@coders.net>
 koitsu/k9, Jeremy Chadwick <jdc@best.net>
