@@ -91,11 +91,11 @@ HOW TO GET HELP:
 ----------------
 Send Check or Money Order to...  just kidding!  You're on your own for
 support.  Try asking other ircd-hybrid admins on EFnet if you can't fix
-it yourself.  If you do fix anything, however, please send context
-diffs to ircd-hybrid@the-project.org so the fixes can be incorporated
-into the next release of ircd-hybrid.  If hybrid crashes on you,
-PLEASE CONTACT ircd-hybrid@the-project.org ASAP with a backtrace of
-the core.  The hybrid team can't fix bugs if no one tells us about them!
+it yourself.  If you do fix anything, however, please send context or
+unified diffs to ircd-hybrid@the-project.org so the fixes can be
+incorporated into the next release of ircd-hybrid.  If hybrid crashes on
+you, PLEASE CONTACT ircd-hybrid@the-project.org ASAP with a backtrace of
+the core.  The Hybrid team can't fix bugs if no one tells us about them!
 
 There is now a mailing list for general discussion of Hybrid.  To subscribe
 to the Hybrid List, send email to listmanager@the-project.org with
@@ -107,14 +107,16 @@ The best way to get a backtrace of the core is to follow this sequence of
 instructions:
 1.  Change to the directory where the core file is
 2.  Run gdb on the binary and the core file.  With an unmodified Hybrid-7, 
-an example command line is below (in the /usr/local/ircd directory)
-$ gdb bin/ircd ircd.core
+    an example command line is below (in the /usr/local/ircd directory)
+
+    $ gdb bin/ircd ircd.core
+
 3.  At the "(gdb)" prompt, enter the command "bt"
 4.  Save the output of the backtrace command and send it to 
-ircd-hybrid@the-project.org.
+    ircd-hybrid@the-project.org.
 5.  Be sure to save the ircd binary, the modules, and the core file in a 
-safe place in case the developers need to look deeper than a backtrace 
-provides.
+    safe place in case the developers need to look deeper than a backtrace 
+    provides.
 
 OPENSSL NOTES:
 --------------
@@ -149,4 +151,4 @@ recompile all applications that use libcrypto to use the system one.
 This may be kludged in the future.
 
 --------------------------------------------------------------------------------
-$Id: INSTALL,v 7.15 2001/09/28 04:33:29 wcampbel Exp $
+$Id: INSTALL,v 7.16 2001/10/19 15:51:16 wcampbel Exp $
