@@ -13,8 +13,6 @@ BUGS: Major bugs in this release are listed in BUGS
 BUG REPORTS: If you run this code and encounter problems, you must report
  the bug in one of the following ways:
   a) By EMAIL to ircd-hybrid@the-project.org.  
-  b) By GNATS - use the `send-pr' script that should be installed into bin/ 
-     along with the rest of ircd.
  Please include a gdb backtrace and a copy of your config.h and ircd.conf 
  with any report  (with passwords and other sensitive information masked).
 
@@ -40,4 +38,4 @@ Other files recommended for reading: BUGS, README.FIRST, INSTALL
   *************************************************************************
 
 --------------------------------------------------------------------------------
-$Id: RELNOTES,v 1.9 2001/08/26 04:31:35 wcampbel Exp $
+$Id: RELNOTES,v 1.10 2001/10/19 15:51:16 wcampbel Exp $
