@@ -1,4 +1,4 @@
-$Id: README,v 7.7 2001/08/26 04:31:37 wcampbel Exp $
+$Id: README,v 7.8 2001/10/19 15:51:17 wcampbel Exp $
 
 A directory of support programs for ircd.
 
@@ -9,7 +9,6 @@ convertklines.c - convert Hybrid 5/6 and early 7beta kline.conf files
 encspeed.c      - test the speed of various encryption algorithms used in
                   cryptlinks
 fixklines.c     - converts 192.168.0.* K and D lines to CIDR format
-ircd_start.c    - start program for solaris
 klineParse.c    - cleans out redundant klines
 mkconf          - a script to create a basic ircd.conf (Note:  not updated
                   for -7)
@@ -17,8 +16,8 @@ mkkeypair       - a small program used for generating a public and private
                   key pair
 mkpasswd.c      - makes password for O lines
 rsa_respond/    - a tool to generate an RSA response to the challenge asked
-                  by the server.
-start_ircd.c    - start program for fbsd and bsd/os systems
+                  by the server, and a tool to generate a keypair for the
+                  C/R system
 untabify        - converts tab characters to a specific number of spaces
 viconf          - edit your conf file without having to chdir su etc. etc.
                   also locks the file if file locking is used.
