@@ -1,5 +1,5 @@
 mkpasswd.c documentation
-$Id: README.mkpasswd,v 1.3 2001/07/28 22:51:20 wcampbel Exp $
+$Id: README.mkpasswd,v 1.4 2001/10/19 15:51:17 wcampbel Exp $
 
 This is documentation for the mkpasswd.c included in ircd-hybrid-7.
 
